--- a/css/style.css
+++ b/css/style.css
@@ -6,15 +6,18 @@
 }
 
 /* global */
-input[type=text], input[type=email], input[type=password]{
-    padding: 5px;
-    outline: none;
-    height: 40px;
+input[type="text"],
+input[type="email"],
+input[type="password"],
+input[type="number"] {
+  padding: 5px;
+  outline: none;
+  height: 40px;
 }
-.page-button{
-    cursor: pointer;
-    height: 48px;
-    font-size: 16px;
+.page-button {
+  cursor: pointer;
+  height: 48px;
+  font-size: 16px;
 }
 
 /* Navbar */
@@ -41,7 +44,6 @@ input[type=text], input[type=email], input[type=password]{
 .navbar ul li {
   padding: 10px;
 }
-
 
 /* footer */
 footer {
@@ -98,7 +100,6 @@ form {
   flex-direction: column;
 }
 
-
 .login-page-container .small-container {
   background-color: #f7f7f7;
   margin: 10px;
@@ -107,9 +108,113 @@ form {
   text-align: center;
 }
 
-.login-error{
+.login-error {
   height: 30px;
   margin: 10px;
   text-align: center;
   color: red;
+}
+
+.message {
+  height: 30px;
+  margin: 10px;
+  text-align: center;
+}
+
+/* admin dashboard*/
+.dashboard-container {
+  padding: 40px;
+  background-color: aliceblue;
+}
+
+.dashboard-container .heading-section {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  height: 80px;
+}
+
+.dashboard-container .button-side .page-button {
+  width: 150px;
+}
+
+.card-section {
+  display: flex;
+  margin: 40px 0;
+  gap: 40px;
+}
+
+.card-section .dashbaord-card {
+  width: 300px;
+  height: 100px;
+  background-color: #fff;
+  border-radius: 25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.recent-section {
+  display: flex;
+  gap: 20px;
+  background-color: #fff;
+  padding: 10px 20px;
+  border-radius: 15px;
+  flex-direction: column;
+}
+
+.recent-section .heading {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+
+/* add form */
+
+.add-form {
+  /* width: 45%; */
+  display: flex;
+  gap: 50px;
+}
+
+.add-product-form {
+  width: 45%;
+}
+
+#imagePreviewContainer {
+  margin-top: 20px;
+}
+
+#imagePreview {
+  max-width: 100%;
+  max-height: 300px;
+  margin-top: 10px;
+}
+
+textarea {
+  width: 100%;
+  padding: 10px;
+  margin: 10px 0;
+  box-sizing: border-box;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: vertical; /* Allow vertical resizing */
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+/* Optional: Style for focused state */
+textarea:focus {
+  border-color: #007bff; /* Change border color when focused */
+  outline: none; /* Remove default focus outline */
+  box-shadow: 0 0 5px rgba(0, 123, 255, 0.5); /* Add a subtle box shadow when focused */
+}
+
+
+.allProduct-container{
+  width: 80%;
+  margin: 0 auto;
 }
