--- a/css/style.css
+++ b/css/style.css
@@ -167,9 +167,15 @@ td {
 }
 
 .message {
-  height: 30px;
-  margin: 10px;
+  width: 50%;
+  padding: 8px;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
+  position: absolute;
+  color: black;
 }
 
 /* admin dashboard*/
